[package]
name = "concurrent_skiplist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-option = "0.1.2"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
