[package]
name = "concurrent_skiplist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-option = "0.1.2"
rand = "0.8.5"
#spinlock = "0.1.2"
parking_lot = "0.12.1"
crossbeam = "0.8"
crossbeam-skiplist = "0.1"
bumpalo-herd = "0.1.2"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
# name = "benchall"
name = "bench_jjj"
harness = false

